--- a/car-service-client/app.json
+++ b/car-service-client/app.json
@@ -10,7 +10,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
@@ -28,7 +29,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.erkan1984.carserviceclient"
     },
     "android": {
       "adaptiveIcon": {
