--- a/car-service-client/package.json
+++ b/car-service-client/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.7",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-constants": "~15.4.5",
+    "expo-image": "~1.10.5",
+    "expo-linear-gradient": "~12.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.6",
     "expo-status-bar": "~1.11.1",
@@ -29,8 +33,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "expo-image": "~1.10.5",
-    "expo-linear-gradient": "~12.7.1"
+    "expo-secure-store": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
