--- a/car-service-client/package.json
+++ b/car-service-client/package.json
@@ -19,9 +19,11 @@
     "expo-linear-gradient": "~12.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.6",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,8 +34,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6",
-    "expo-secure-store": "~12.8.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
