--- a/car-service-client/app.json
+++ b/car-service-client/app.json
@@ -11,7 +11,8 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true,
