--- a/car-service-client/package.json
+++ b/car-service-client/package.json
@@ -34,7 +34,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-localization": "~14.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
